update crud by requirement
