# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/news": {
             "get": {
-                "description": "Get list of news",
+                "description": "Get list of news articles with optional filters by status and topic",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,7 +21,21 @@
                 "tags": [
                     "News"
                 ],
-                "summary": "List all news",
+                "summary": "Get all news",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter by status (draft, published, deleted)",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Filter by topic ID",
+                        "name": "topic_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -29,6 +43,15 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.News"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
                             }
                         }
                     }
@@ -480,14 +503,17 @@
                 "id": {
                     "type": "integer"
                 },
+                "status": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
                 },
-                "topic": {
-                    "$ref": "#/definitions/models.Topic"
-                },
-                "topic_id": {
-                    "type": "integer"
+                "topics": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Topic"
+                    }
                 },
                 "updated_at": {
                     "type": "string"
@@ -507,7 +533,6 @@
                     "type": "string"
                 },
                 "news": {
-                    "description": "Relations",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.News"
